fix input label alignment

--- a/repos/web/style/input.custom.less
+++ b/repos/web/style/input.custom.less
@@ -1,7 +1,7 @@
 @import "_mixins";
 
 .input--wrapper {
-  > label {
+  > .flex--row > label {
     &:extend(.no-margin-left all);
   }
 
